--- a/index.html
+++ b/index.html
@@ -1082,6 +1082,25 @@
     </div>
 </div>
 
+                    <div class="video-card">
+    <div class="video-player-container">
+        <iframe class="video-player" 
+                src="https://drive.google.com/file/d/1-028rDAY1QTSUOBerRwSaetaw6cfWexa/preview" 
+                allow="autoplay; encrypted-media; fullscreen" 
+                allowfullscreen 
+                playsinline
+                webkit-playsinline
+                moz-playsinline
+                loading="lazy"
+                title="Vídeo: O Homem Misterioso - Aluno Vinicius Eiji A. Haguiara">
+        </iframe>
+    </div>
+    <div class="video-info">
+        <h3 class="video-title">O Homem Misterioso</h3>
+        <p class="video-description">Aluno: Vinicius Eiji A. Haguiara</p>
+    </div>
+</div>
+                    
                      <div class="video-card">
     <div class="video-player-container">
         <iframe class="video-player" 
@@ -1548,4 +1567,5 @@
         window.addEventListener('resize', resizeVideos);
     </script>
 </body>
+
 </html>
